examples/semantics/errors/error5c.grace
fun error5c () : nothing
{
	abs('b');
}
